--- a/examples/loop-components/builtin_iterate.yaml
+++ b/examples/loop-components/builtin_iterate.yaml
@@ -1,101 +1,105 @@
 schema: https://stepflow.org/schemas/v1/flow.json
-name: "Test Builtin Iterate"
-description: "Test the builtin iterate component"
-
+name: Test Builtin Iterate
+description: Test the builtin iterate component
 steps:
-  - id: create_counter_flow
-    component: "/builtin/put_blob"
-    input:
-      data:
-        $literal:
-          schema: "https://stepflow.org/schemas/v1/flow.json"
-          steps:
-            - id: counter
-              component: "/python/counter_step"
-              input:
-                current: { $from: { workflow: input }, path: "current" }
-                target: { $from: { workflow: input }, path: "target" }
-          output: { $from: { step: "counter" } }
-      blob_type: "flow"
-  
-  - id: count_to_target
-    component: "/python/iterate"
-    input:
-      flow_id: { $from: { step: "create_counter_flow" }, path: "blob_id" }
-      initial_input:
-        current: { $from: { workflow: input }, path: "current" }
-        target: { $from: { workflow: input }, path: "target" }
-      max_iterations: 20
-
-output: { $from: { step: "count_to_target" } }
-
+- id: create_counter_flow
+  component: /builtin/put_blob
+  input:
+    data:
+      $literal:
+        schema: https://stepflow.org/schemas/v1/flow.json
+        steps:
+        - id: counter
+          component: /python/counter_step
+          input:
+            current:
+              $input: current
+            target:
+              $input: target
+        output:
+          $step: counter
+    blob_type: flow
+- id: count_to_target
+  component: /python/iterate
+  input:
+    flow_id:
+      $step: create_counter_flow
+      path: blob_id
+    initial_input:
+      current:
+        $input: current
+      target:
+        $input: target
+    max_iterations: 20
+output:
+  $step: count_to_target
 input_schema:
   type: object
   properties:
     current:
       type: integer
-      description: "Starting value for the counter"
+      description: Starting value for the counter
     target:
       type: integer
-      description: "Target value to count to"
-  required: ["current", "target"]
-
+      description: Target value to count to
+  required:
+  - current
+  - target
 output_schema:
   type: object
   properties:
     result:
       type: string
-      description: "Final counter value"
+      description: Final counter value
     iterations:
       type: integer
-      description: "Number of iterations performed"
+      description: Number of iterations performed
     terminated:
       type: boolean
-      description: "Whether iteration was terminated by max_iterations"
-  required: ["result", "iterations", "terminated"]
-
+      description: Whether iteration was terminated by max_iterations
+  required:
+  - result
+  - iterations
+  - terminated
 test:
   cases:
-    - name: "Count from 0 to 5"
-      input:
-        current: 0
-        target: 5
-      output:
-        outcome: success
-        result:
-          result: "Reached target 5"
-          iterations: 6
-          terminated: false
-
-    - name: "Count from 3 to 7"
-      input:
-        current: 3
-        target: 7
-      output:
-        outcome: success
-        result:
-          result: "Reached target 7"
-          iterations: 5
-          terminated: false
-
-    - name: "Already at target"
-      input:
-        current: 10
-        target: 10
-      output:
-        outcome: success
-        result:
-          result: "Reached target 10"
-          iterations: 1
-          terminated: false
-
-    - name: "Single step count"
-      input:
-        current: 1
-        target: 2
-      output:
-        outcome: success
-        result:
-          result: "Reached target 2"
-          iterations: 2
-          terminated: false
+  - name: Count from 0 to 5
+    input:
+      current: 0
+      target: 5
+    output:
+      outcome: success
+      result:
+        result: Reached target 5
+        iterations: 6
+        terminated: false
+  - name: Count from 3 to 7
+    input:
+      current: 3
+      target: 7
+    output:
+      outcome: success
+      result:
+        result: Reached target 7
+        iterations: 5
+        terminated: false
+  - name: Already at target
+    input:
+      current: 10
+      target: 10
+    output:
+      outcome: success
+      result:
+        result: Reached target 10
+        iterations: 1
+        terminated: false
+  - name: Single step count
+    input:
+      current: 1
+      target: 2
+    output:
+      outcome: success
+      result:
+        result: Reached target 2
+        iterations: 2
+        terminated: false
