--- a/examples/mcp-component/basic.yaml
+++ b/examples/mcp-component/basic.yaml
@@ -1,47 +1,50 @@
 schema: https://stepflow.org/schemas/v1/flow.json
-name: "MCP Filesystem Example"
-description: "Demonstrates using MCP filesystem tools to read and write files"
-
+name: MCP Filesystem Example
+description: Demonstrates using MCP filesystem tools to read and write files
 input_schema:
   type: object
   properties:
     filename:
       type: string
-      description: "Name of the file to create"
-      default: "/tmp/stepflow-mcp-example.txt"
+      description: Name of the file to create
+      default: /tmp/stepflow-mcp-example.txt
     content:
       type: string
-      description: "Content to write to the file"
-      default: "Hello from Stepflow using MCP tools!"
-  required: ["filename", "content"]
-
+      description: Content to write to the file
+      default: Hello from Stepflow using MCP tools!
+  required:
+  - filename
+  - content
 steps:
-  # Step 1: Create a file using MCP filesystem tool
-  - id: create_file
-    component: /filesystem/write_file
-    input:
-      path: { $from: { workflow: input }, path: "filename" }
-      content: { $from: { workflow: input }, path: "content" }
-
-  # Step 2: Read the file back to verify it was created
-  - id: read_file
-    component: /filesystem/read_text_file
-    depends_on: [create_file]
-    input:
-      path: { $from: { workflow: input }, path: "filename" }
-
-  # Step 3: List files in the directory to show the created file
-  - id: list_directory
-    component: /filesystem/list_directory
-    depends_on: [create_file]
-    input:
-      path: "/private/tmp"
-
+- id: create_file
+  component: /filesystem/write_file
+  input:
+    path:
+      $input: filename
+    content:
+      $input: content
+- id: read_file
+  component: /filesystem/read_text_file
+  depends_on:
+  - create_file
+  input:
+    path:
+      $input: filename
+- id: list_directory
+  component: /filesystem/list_directory
+  depends_on:
+  - create_file
+  input:
+    path: /private/tmp
 output:
-  file_path: { $from: { workflow: input }, path: "filename" }
-  file_content: { $from: { step: read_file } }
-  directory_listing: { $from: { step: list_directory } }
-  success_message: 
-    $template: "Successfully created, read, and listed file: {{filename}}"
+  file_path:
+    $input: filename
+  file_content:
+    $step: read_file
+  directory_listing:
+    $step: list_directory
+  success_message:
+    $template: 'Successfully created, read, and listed file: {{filename}}'
     values:
-      filename: { $from: { workflow: input }, path: "filename" }
+      filename:
+        $input: filename
