--- a/examples/openai/openai_chat.yaml
+++ b/examples/openai/openai_chat.yaml
@@ -1,27 +1,31 @@
 schema: https://stepflow.org/schemas/v1/flow.json
 input_schema:
   type: object
-  required: [prompt]
+  required:
+  - prompt
   properties:
     prompt:
       type: string
-      description: "The prompt to send to OpenAI"
+      description: The prompt to send to OpenAI
     system_message:
       type: string
-      description: "Optional system message to set context"
-      default: "You are a helpful assistant, explaining complex things in simple terms."
-
+      description: Optional system message to set context
+      default: You are a helpful assistant, explaining complex things in simple terms.
 steps:
-  - id: create_messages
-    component: /create_messages
-    input:
-      system_instructions: { $from: { workflow: input }, path: system_message }
-      user_prompt: { $from: { workflow: input }, path: prompt }
-
-  - id: send_message
-    component: /openai
-    input:
-      messages: { $from: { step: create_messages }, path: messages }
-
+- id: create_messages
+  component: /create_messages
+  input:
+    system_instructions:
+      $input: system_message
+    user_prompt:
+      $input: prompt
+- id: send_message
+  component: /openai
+  input:
+    messages:
+      $step: create_messages
+      path: messages
 output:
-  response: { $from: { step: send_message }, path: response }
+  response:
+    $step: send_message
+    path: response
