--- a/tests/mock/error_skip.yaml
+++ b/tests/mock/error_skip.yaml
@@ -15,13 +15,10 @@ steps:
     action: skip
   input:
     mode:
-      $from:
-        workflow: input
-      path: mode
+      $input: mode
 output:
   errorResult:
-    $from:
-      step: error
+    $step: error
     path: output
 test:
   cases:
