--- a/tests/mock/error_use_default.yaml
+++ b/tests/mock/error_use_default.yaml
@@ -15,13 +15,10 @@ steps:
     action: useDefault
   input:
     mode:
-      $from:
-        workflow: input
-      path: mode
+      $input: mode
 output:
   errorResult:
-    $from:
-      step: error
+    $step: error
 test:
   cases:
   - name: test error case that uses default
