--- a/tests/python/udf_simple.yaml
+++ b/tests/python/udf_simple.yaml
@@ -16,7 +16,6 @@ output_schema:
     sum:
       type: number
 steps:
-# Create blobs for function definitions
 - id: create_addition_blob
   component: /builtin/put_blob
   input_schema: null
@@ -34,7 +33,7 @@ steps:
         - x
         - y
       code: input['x'] + input['y']
-    blob_type: "data"
+    blob_type: data
 - id: create_multiplication_blob
   component: /builtin/put_blob
   input_schema: null
@@ -52,7 +51,7 @@ steps:
         - x
         - y
       code: input['x'] * input['y']
-    blob_type: "data"
+    blob_type: data
 - id: create_complex_calculation_blob
   component: /builtin/put_blob
   input_schema: null
@@ -70,70 +69,53 @@ steps:
         - sum
         - product
       code: math.sqrt(input['sum'] ** 2 + input['product'] ** 2)
-    blob_type: "data"
-# Execute functions using blob_ids
+    blob_type: data
 - id: simple_addition
   component: /python/udf
   input_schema: null
   output_schema: null
   input:
     blob_id:
-      $from:
-        step: create_addition_blob
+      $step: create_addition_blob
       path: blob_id
     input:
       x:
-        $from:
-          workflow: input
-        path: x
+        $input: x
       y:
-        $from:
-          workflow: input
-        path: y
+        $input: y
 - id: simple_multiplication
   component: /python/udf
   input_schema: null
   output_schema: null
   input:
     blob_id:
-      $from:
-        step: create_multiplication_blob
+      $step: create_multiplication_blob
       path: blob_id
     input:
       x:
-        $from:
-          workflow: input
-        path: x
+        $input: x
       y:
-        $from:
-          workflow: input
-        path: y
+        $input: y
 - id: complex_calculation
   component: /python/udf
   input_schema: null
   output_schema: null
   input:
     blob_id:
-      $from:
-        step: create_complex_calculation_blob
+      $step: create_complex_calculation_blob
       path: blob_id
     input:
       sum:
-        $from:
-          step: simple_addition
+        $step: simple_addition
       product:
-        $from:
-          step: simple_multiplication
+        $step: simple_multiplication
 output:
   sum:
-    $from:
-      step: simple_addition
+    $step: simple_addition
   product:
-    $from:
-      step: simple_multiplication
+    $step: simple_multiplication
   custom_calculation:
-    $from:
-      step: complex_calculation
+    $step: complex_calculation
 test:
   cases:
   - name: calculate with x=3, y=4
