--- a/tests/python/udf_text_processing.yaml
+++ b/tests/python/udf_text_processing.yaml
@@ -16,7 +16,6 @@ output_schema:
     word_analysis:
       type: object
 steps:
-# Create blobs for function definitions
 - id: create_word_analysis_blob
   component: /builtin/put_blob
   input_schema: null
@@ -30,34 +29,17 @@ steps:
             type: string
         required:
         - text
-      code: |
-        text = input['text'].lower()
-        words = text.split()
-
-        word_count = len(words)
-        char_count = len(text.replace(' ', ''))
-
-        # Count word lengths
-        word_lengths = {}
-        for word in words:
-            length = len(word)
-            word_lengths[length] = word_lengths.get(length, 0) + 1
-
-        # Find most common words
-        word_freq = {}
-        for word in words:
-            word_freq[word] = word_freq.get(word, 0) + 1
-
-        most_common = sorted(word_freq.items(), key=lambda x: x[1], reverse=True)[:3]
-
-        return {
-            'word_count': word_count,
-            'char_count': char_count,
-            'avg_word_length': round(char_count / word_count, 2) if word_count > 0 else 0,
-            'word_length_distribution': word_lengths,
-            'most_common_words': [{'word': word, 'count': count} for word, count in most_common]
-        }
-    blob_type: "data"
+      code: "text = input['text'].lower()\nwords = text.split()\n\nword_count = len(words)\n\
+        char_count = len(text.replace(' ', ''))\n\n# Count word lengths\nword_lengths\
+        \ = {}\nfor word in words:\n    length = len(word)\n    word_lengths[length]\
+        \ = word_lengths.get(length, 0) + 1\n\n# Find most common words\nword_freq\
+        \ = {}\nfor word in words:\n    word_freq[word] = word_freq.get(word, 0) +\
+        \ 1\n\nmost_common = sorted(word_freq.items(), key=lambda x: x[1], reverse=True)[:3]\n\
+        \nreturn {\n    'word_count': word_count,\n    'char_count': char_count,\n\
+        \    'avg_word_length': round(char_count / word_count, 2) if word_count >\
+        \ 0 else 0,\n    'word_length_distribution': word_lengths,\n    'most_common_words':\
+        \ [{'word': word, 'count': count} for word, count in most_common]\n}\n"
+    blob_type: data
 - id: create_pattern_search_blob
   component: /builtin/put_blob
   input_schema: null
@@ -74,16 +56,10 @@ steps:
         required:
         - text
         - pattern
-      code: |
-        text = input['text']
-        pattern = input['pattern']
-
-        try:
-            matches = re.findall(pattern, text)
-            return [{'match': match, 'index': i} for i, match in enumerate(matches)]
-        except:
-            return []
-    blob_type: "data"
+      code: "text = input['text']\npattern = input['pattern']\n\ntry:\n    matches\
+        \ = re.findall(pattern, text)\n    return [{'match': match, 'index': i} for\
+        \ i, match in enumerate(matches)]\nexcept:\n    return []\n"
+    blob_type: data
 - id: create_sentiment_analysis_blob
   component: /builtin/put_blob
   input_schema: null
@@ -97,87 +73,65 @@ steps:
             type: string
         required:
         - text
-      code: |
-        # Simple sentiment analysis based on positive/negative words
-        positive_words = ['good', 'great', 'excellent', 'amazing', 'wonderful', 'fantastic', 'love', 'like', 'happy', 'joy']
-        negative_words = ['bad', 'terrible', 'awful', 'horrible', 'hate', 'dislike', 'sad', 'angry', 'upset', 'disappointed']
-
-        text = input['text'].lower()
-        words = text.split()
-
-        positive_count = sum(1 for word in words if word in positive_words)
-        negative_count = sum(1 for word in words if word in negative_words)
-
-        total_sentiment_words = positive_count + negative_count
-        if total_sentiment_words == 0:
-            return 0.0  # Neutral
-
-        # Return score between -1 (very negative) and 1 (very positive)
-        sentiment_score = (positive_count - negative_count) / total_sentiment_words
-        return round(sentiment_score, 2)
-    blob_type: "data"
-# Execute functions using blob_ids
+      code: "# Simple sentiment analysis based on positive/negative words\npositive_words\
+        \ = ['good', 'great', 'excellent', 'amazing', 'wonderful', 'fantastic', 'love',\
+        \ 'like', 'happy', 'joy']\nnegative_words = ['bad', 'terrible', 'awful', 'horrible',\
+        \ 'hate', 'dislike', 'sad', 'angry', 'upset', 'disappointed']\n\ntext = input['text'].lower()\n\
+        words = text.split()\n\npositive_count = sum(1 for word in words if word in\
+        \ positive_words)\nnegative_count = sum(1 for word in words if word in negative_words)\n\
+        \ntotal_sentiment_words = positive_count + negative_count\nif total_sentiment_words\
+        \ == 0:\n    return 0.0  # Neutral\n\n# Return score between -1 (very negative)\
+        \ and 1 (very positive)\nsentiment_score = (positive_count - negative_count)\
+        \ / total_sentiment_words\nreturn round(sentiment_score, 2)\n"
+    blob_type: data
 - id: word_analysis
   component: /python/udf
   input_schema: null
   output_schema: null
   input:
     blob_id:
-      $from:
-        step: create_word_analysis_blob
+      $step: create_word_analysis_blob
       path: blob_id
     input:
       text:
-        $from:
-          workflow: input
-        path: text
+        $input: text
 - id: pattern_search
   component: /python/udf
   input_schema: null
   output_schema: null
   input:
     blob_id:
-      $from:
-        step: create_pattern_search_blob
+      $step: create_pattern_search_blob
       path: blob_id
     input:
       text:
-        $from:
-          workflow: input
-        path: text
+        $input: text
       pattern:
-        $from:
-          workflow: input
-        path: pattern
+        $input: pattern
 - id: sentiment_analysis
   component: /python/udf
   input_schema: null
   output_schema: null
   input:
     blob_id:
-      $from:
-        step: create_sentiment_analysis_blob
+      $step: create_sentiment_analysis_blob
       path: blob_id
     input:
       text:
-        $from:
-          workflow: input
-        path: text
+        $input: text
 output:
   word_analysis:
-    $from:
-      step: word_analysis
+    $step: word_analysis
   pattern_matches:
-    $from:
-      step: pattern_search
+    $step: pattern_search
   sentiment_score:
-    $from:
-      step: sentiment_analysis
+    $step: sentiment_analysis
 test:
   cases:
   - name: process positive text with word pattern
     input:
-      text: This is a great example of text processing. I love how flexible this system is!
+      text: This is a great example of text processing. I love how flexible this system
+        is!
       pattern: \b\w{4,}\b
     output:
       outcome: success
